--- a/sector/GridIterable/elementAt.html
+++ b/sector/GridIterable/elementAt.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
-  <meta name="description" content="API docs for the offsetWhere method from the ListGrid class, for the Dart programming language.">
-  <title>offsetWhere method - ListGrid class - sector library - Dart API</title>
+  <meta name="description" content="API docs for the elementAt method from the GridIterable class, for the Dart programming language.">
+  <title>elementAt method - GridIterable class - sector library - Dart API</title>
 
 
   
@@ -30,10 +30,10 @@
   <ol class="breadcrumbs gt-separated dark hidden-xs">
     <li><a href="../../index.html">sector</a></li>
     <li><a href="../../sector/sector-library.html">sector.dart</a></li>
-    <li><a href="../../sector/ListGrid-class.html">ListGrid<span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></a></li>
-    <li class="self-crumb">offsetWhere method</li>
+    <li><a href="../../sector/GridIterable-class.html">GridIterable<span class="signature">&lt;<wbr><span class="type-parameter">E</span>&gt;</span></a></li>
+    <li class="self-crumb">elementAt method</li>
   </ol>
-  <div class="self-name">offsetWhere</div>
+  <div class="self-name">elementAt</div>
   <form class="search navbar-right" role="search">
     <input type="text" id="search-box" autocomplete="off" disabled class="form-control typeahead" placeholder="Loading search...">
   </form>
@@ -54,10 +54,10 @@
 <div
     id="dartdoc-main-content"
     class="main-content"
-    data-above-sidebar="sector&#47;ListGrid-class-sidebar.html"
+    data-above-sidebar="sector&#47;GridIterable-class-sidebar.html"
     data-below-sidebar="">
     <div>
-<h1><span class="kind-method">offsetWhere</span> method 
+<h1><span class="kind-method">elementAt</span> method 
 </h1></div>
 
     <section class="multi-line-signature">
@@ -68,11 +68,8 @@
     </ol>
   </div>
 
-<span class="returntype">(<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)?</span>
-<span class="name ">offsetWhere</span>(<wbr><ol class="parameter-list"><li><span class="parameter" id="offsetWhere-param-test"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/bool-class.html">bool</a></span> <span class="parameter-name">test</span>(<ol class="parameter-list"><li><span class="parameter" id="param-"><span class="type-annotation">T</span></span></li>
-</ol>
-), </span></li>
-<li><span class="parameter" id="offsetWhere-param-start">[<span class="type-annotation">(<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)</span> <span class="parameter-name">start</span> = <span class="default-value">(0, 0)</span>]</span></li>
+<span class="returntype">E</span>
+<span class="name ">elementAt</span>(<wbr><ol class="parameter-list"><li><span class="parameter" id="elementAt-param-index"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span> <span class="parameter-name">index</span></span></li>
 </ol>)
 
       <div class="features"><span class="feature">override</span></div>
@@ -80,17 +77,17 @@
     </section>
     
 <section class="desc markdown">
-  <p>Returns the first <code>(x, y)</code> offset where <code>test</code> returns <code>true</code>.</p>
-<p>If <code>start</code> is provided, the search starts at the provided offset,
-otherwise it starts at <code>(0, 0)</code>. If the element is not found, <code>null</code> is
-returned.</p>
-<div class="markdown-alert markdown-alert-note">
-<p class="markdown-alert-title">Note</p>
-<p>The order of the search is not guaranteed, and may vary depending on the
-implementation of the grid. If the order of the search is important, it
-is recommended to use <a href="../../sector/ListGrid/rows.html">rows</a> or <a href="../../sector/ListGrid/columns.html">columns</a> to iterate over the grid and
-search for the element.</p>
-</div>
+  <p>Returns the <code>index</code>th element.</p>
+<p>The <code>index</code> must be non-negative and less than <a href="../../sector/GridIterable/length.html">length</a>.
+Index zero represents the first element (so <code>iterable.elementAt(0)</code> is
+equivalent to <code>iterable.first</code>).</p>
+<p>May iterate through the elements in iteration order, ignoring the
+first <code>index</code> elements and then returning the next.
+Some iterables may have a more efficient way to find the element.</p>
+<p>Example:</p>
+<pre class="language-dart"><code class="language-dart">final numbers = &lt;int&gt;[1, 2, 3, 5, 6, 7];
+final elementAt = numbers.elementAt(4); // 6
+</code></pre>
 </section>
 
 
@@ -98,17 +95,13 @@ search for the element.</p>
 <section class="summary source-code" id="source">
   <h2><span>Implementation</span></h2>
   <pre class="language-dart"><code class="language-dart">@override
-(int, int)? offsetWhere(
-  bool Function(T) test, [
-  (int, int) start = (0, 0),
-]) {
-  &#47;&#47; Convert the offset into an index.
-  final offset = _index(start.$1, start.$2);
-  final index = _cells.indexWhere(test, offset);
-  if (index == -1) {
-    return null;
+E elementAt(int index) {
+  RangeError.checkNotNegative(index, &#39;index&#39;);
+  final it = _iterator();
+  if (it.seek(index + 1)) {
+    return it.current;
   }
-  return _offset(index);
+  throw IndexError.withLength(index, length, indexable: this, name: &#39;index&#39;);
 }</code></pre>
 </section>
 
@@ -126,12 +119,12 @@ search for the element.</p>
 <ol class="breadcrumbs gt-separated dark hidden-l" id="sidebar-nav">
     <li><a href="../../index.html">sector</a></li>
     <li><a href="../../sector/sector-library.html">sector</a></li>
-    <li><a href="../../sector/ListGrid-class.html">ListGrid<span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></a></li>
-    <li class="self-crumb">offsetWhere method</li>
+    <li><a href="../../sector/GridIterable-class.html">GridIterable<span class="signature">&lt;<wbr><span class="type-parameter">E</span>&gt;</span></a></li>
+    <li class="self-crumb">elementAt method</li>
 </ol>
 
 
-    <h5>ListGrid class</h5>
+    <h5>GridIterable class</h5>
     <div id="dartdoc-sidebar-left-content"></div>
   </div><!--/.sidebar-offcanvas-->
 
