--- a/sector/ListGrid-class-sidebar.html
+++ b/sector/ListGrid-class-sidebar.html
@@ -31,15 +31,12 @@
           <li class="inherited"><a href="sector/Grid/containsXYWH.html">containsXYWH</a></li>
           <li class="inherited"><a href="sector/Grid/get.html">get</a></li>
           <li><a href="sector/ListGrid/getUnchecked.html">getUnchecked</a></li>
-          <li><a href="sector/ListGrid/lastOffsetOf.html">lastOffsetOf</a></li>
-          <li><a href="sector/ListGrid/lastOffsetWhere.html">lastOffsetWhere</a></li>
           <li class="inherited"><a href="https://api.dart.dev/stable/3.4.4/dart-core/Object/noSuchMethod.html">noSuchMethod</a></li>
-          <li><a href="sector/ListGrid/offsetOf.html">offsetOf</a></li>
-          <li><a href="sector/ListGrid/offsetWhere.html">offsetWhere</a></li>
           <li class="inherited"><a href="sector/Grid/set.html">set</a></li>
           <li><a href="sector/ListGrid/setUnchecked.html">setUnchecked</a></li>
           <li class="inherited"><a href="sector/Grid/subGrid.html">subGrid</a></li>
           <li class="inherited"><a href="sector/Grid/toString.html">toString</a></li>
+          <li class="inherited"><a href="sector/Grid/traverse.html">traverse</a></li>
 
         <li class="section-title inherited"><a href="sector/ListGrid-class.html#operators">Operators</a></li>
           <li class="inherited"><a href="https://api.dart.dev/stable/3.4.4/dart-core/Object/operator_equals.html">operator ==</a></li>
