--- a/sector/sector-library-sidebar.html
+++ b/sector/sector-library-sidebar.html
@@ -2,9 +2,13 @@
       <li class="section-title"><a href="sector/sector-library.html#classes">Classes</a></li>
         <li><a href="sector/Columns-class.html">Columns</a></li>
         <li><a href="sector/Grid-class.html">Grid</a></li>
+        <li><a href="sector/GridIterable-class.html">GridIterable</a></li>
+        <li><a href="sector/GridIterator-class.html">GridIterator</a></li>
         <li><a href="sector/ListGrid-class.html">ListGrid</a></li>
         <li><a href="sector/Rows-class.html">Rows</a></li>
 
+      <li class="section-title"><a href="sector/sector-library.html#enums">Enums</a></li>
+        <li><a href="sector/Octant.html">Octant</a></li>
 
       <li class="section-title"><a href="sector/sector-library.html#mixins">Mixins</a></li>
         <li><a href="sector/ColumnsBase-mixin.html">ColumnsBase</a></li>
@@ -13,7 +17,12 @@
 
 
 
+      <li class="section-title"><a href="sector/sector-library.html#functions">Functions</a></li>
+        <li><a href="sector/drawLine.html">drawLine</a></li>
+        <li><a href="sector/rowMajor.html">rowMajor</a></li>
 
+      <li class="section-title"><a href="sector/sector-library.html#typedefs">Typedefs</a></li>
+        <li><a href="sector/Traversal.html">Traversal</a></li>
 
 
       <li class="section-title"><a href="sector/sector-library.html#extensions">Extensions</a></li>
