--- a/sector/Grid-class-sidebar.html
+++ b/sector/Grid-class-sidebar.html
@@ -30,15 +30,12 @@
           <li><a href="sector/Grid/containsXYWH.html">containsXYWH</a></li>
           <li><a href="sector/Grid/get.html">get</a></li>
           <li><a href="sector/Grid/getUnchecked.html">getUnchecked</a></li>
-          <li><a href="sector/Grid/lastOffsetOf.html">lastOffsetOf</a></li>
-          <li><a href="sector/Grid/lastOffsetWhere.html">lastOffsetWhere</a></li>
           <li class="inherited"><a href="https://api.dart.dev/stable/3.4.4/dart-core/Object/noSuchMethod.html">noSuchMethod</a></li>
-          <li><a href="sector/Grid/offsetOf.html">offsetOf</a></li>
-          <li><a href="sector/Grid/offsetWhere.html">offsetWhere</a></li>
           <li><a href="sector/Grid/set.html">set</a></li>
           <li><a href="sector/Grid/setUnchecked.html">setUnchecked</a></li>
           <li><a href="sector/Grid/subGrid.html">subGrid</a></li>
           <li><a href="sector/Grid/toString.html">toString</a></li>
+          <li><a href="sector/Grid/traverse.html">traverse</a></li>
 
         <li class="section-title inherited"><a href="sector/Grid-class.html#operators">Operators</a></li>
           <li class="inherited"><a href="https://api.dart.dev/stable/3.4.4/dart-core/Object/operator_equals.html">operator ==</a></li>
