--- a/sector/ListGrid-class.html
+++ b/sector/ListGrid-class.html
@@ -348,32 +348,6 @@ the most efficient for most use-cases.</p>
 
 </dd>
 
-        <dt id="lastOffsetOf" class="callable">
-  <span class="name"><a href="../sector/ListGrid/lastOffsetOf.html">lastOffsetOf</a></span><span class="signature">(<wbr><span class="parameter" id="lastOffsetOf-param-element"><span class="type-annotation">T</span> <span class="parameter-name">element</span>, </span><span class="parameter" id="lastOffsetOf-param-end">[<span class="type-annotation">(<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)?</span> <span class="parameter-name">end</span>]</span>)
-    <span class="returntype parameter">&#8594; (<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)?</span>
-  </span>
-  
-
-</dt>
-<dd>
-  Returns the last <code>(x, y)</code> offset of the provided <code>element</code> in the grid.
-  <div class="features"><span class="feature">override</span></div>
-
-</dd>
-
-        <dt id="lastOffsetWhere" class="callable">
-  <span class="name"><a href="../sector/ListGrid/lastOffsetWhere.html">lastOffsetWhere</a></span><span class="signature">(<wbr><span class="parameter" id="lastOffsetWhere-param-test"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/bool-class.html">bool</a></span> <span class="parameter-name">test</span>(<span class="parameter" id="param-"><span class="type-annotation">T</span></span>), </span><span class="parameter" id="lastOffsetWhere-param-end">[<span class="type-annotation">(<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)?</span> <span class="parameter-name">end</span>]</span>)
-    <span class="returntype parameter">&#8594; (<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)?</span>
-  </span>
-  
-
-</dt>
-<dd>
-  Returns the last <code>(x, y)</code> offset where <code>test</code> returns <code>true</code>.
-  <div class="features"><span class="feature">override</span></div>
-
-</dd>
-
         <dt id="noSuchMethod" class="callable inherited">
   <span class="name"><a href="https://api.dart.dev/stable/3.4.4/dart-core/Object/noSuchMethod.html">noSuchMethod</a></span><span class="signature">(<wbr><span class="parameter" id="noSuchMethod-param-invocation"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/Invocation-class.html">Invocation</a></span> <span class="parameter-name">invocation</span></span>)
     <span class="returntype parameter">&#8594; dynamic</span>
@@ -384,32 +358,6 @@ the most efficient for most use-cases.</p>
 <dd class="inherited">
   Invoked when a nonexistent method or property is accessed.
   <div class="features"><span class="feature">inherited</span></div>
-
-</dd>
-
-        <dt id="offsetOf" class="callable">
-  <span class="name"><a href="../sector/ListGrid/offsetOf.html">offsetOf</a></span><span class="signature">(<wbr><span class="parameter" id="offsetOf-param-element"><span class="type-annotation">T</span> <span class="parameter-name">element</span>, </span><span class="parameter" id="offsetOf-param-start">[<span class="type-annotation">(<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)</span> <span class="parameter-name">start</span> = <span class="default-value">(0, 0)</span>]</span>)
-    <span class="returntype parameter">&#8594; (<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)?</span>
-  </span>
-  
-
-</dt>
-<dd>
-  Returns the first <code>(x, y)</code> offset of the provided <code>element</code> in the grid.
-  <div class="features"><span class="feature">override</span></div>
-
-</dd>
-
-        <dt id="offsetWhere" class="callable">
-  <span class="name"><a href="../sector/ListGrid/offsetWhere.html">offsetWhere</a></span><span class="signature">(<wbr><span class="parameter" id="offsetWhere-param-test"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/bool-class.html">bool</a></span> <span class="parameter-name">test</span>(<span class="parameter" id="param-"><span class="type-annotation">T</span></span>), </span><span class="parameter" id="offsetWhere-param-start">[<span class="type-annotation">(<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)</span> <span class="parameter-name">start</span> = <span class="default-value">(0, 0)</span>]</span>)
-    <span class="returntype parameter">&#8594; (<span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span>, </span><span class="field"><span class="type-annotation"><a href="https://api.dart.dev/stable/3.4.4/dart-core/int-class.html">int</a></span></span>)?</span>
-  </span>
-  
-
-</dt>
-<dd>
-  Returns the first <code>(x, y)</code> offset where <code>test</code> returns <code>true</code>.
-  <div class="features"><span class="feature">override</span></div>
 
 </dd>
 
@@ -461,6 +409,19 @@ the most efficient for most use-cases.</p>
 </dt>
 <dd class="inherited">
   A string representation of this object.
+  <div class="features"><span class="feature">inherited</span></div>
+
+</dd>
+
+        <dt id="traverse" class="callable inherited">
+  <span class="name"><a href="../sector/Grid/traverse.html">traverse</a></span><span class="signature">(<wbr><span class="parameter" id="traverse-param-order">[<span class="type-annotation"><a href="../sector/Traversal.html">Traversal</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span>?</span> <span class="parameter-name">order</span>]</span>)
+    <span class="returntype parameter">&#8594; <a href="../sector/GridIterable-class.html">GridIterable</a><span class="signature">&lt;<wbr><span class="type-parameter">T</span>&gt;</span></span>
+  </span>
+  
+
+</dt>
+<dd class="inherited">
+  Returns an iterable that traverses the grid in a specific <code>order</code>.
   <div class="features"><span class="feature">inherited</span></div>
 
 </dd>
